camel-jbang - debug command WIP